fix(trending): Redis 캐시 역직렬화 실패 수정 (Stream.toList → Collectors.toList)
- Stream.toList()가 반환하는 java.util 불변 리스트는 final 타입이라
  GenericJackson2JsonRedisSerializer가 리스트 타입 정보를 기록하지 않음
- 직렬화는 성공하지만 캐시 히트 시 역직렬화에서 SerializationException 발생 (v3 500 응답)
- ArrayList로 수집해 ["java.util.ArrayList", [...]] 타입 래퍼가 기록되도록 수정

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>